--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,12 @@ dependencies {
     implementation 'android.arch.navigation:navigation-ui:1.0.0'
 
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+
+    implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
+
 
 }
