--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mmo.careerlogy">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_app_icon"
+        android:icon="@drawable/ic_careerlogy_logo_icon"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
-        <activity android:name=".Acivity.EntrepreneurSubCategory"></activity>
+        <activity android:name=".Acivity.UserVerification"
+            android:theme="@style/AppNoActionBar"></activity>
+        <activity android:name=".Acivity.EntrepreneurSubCategory" />
         <activity
             android:name=".Acivity.StudentSubCategory"
             android:theme="@style/AppNoActionBar" />
         <activity
             android:name=".Registration"
-            android:theme="@style/AppNoActionBar" />
+            android:theme="@style/AppNoActionBar"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppNoActionBar" />
+            android:theme="@style/AppNoActionBar"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/AppNoActionBar">
+            android:theme="@style/AppNoActionBar"
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
