--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Acivity.UserVerification"
-            android:theme="@style/AppNoActionBar"></activity>
-        <activity android:name=".Acivity.EntrepreneurSubCategory" />
+        <activity android:name=".Acivity.AskQuestionEntrepreneur"
+            android:theme="@style/AppNoActionBar"
+            android:windowSoftInputMode="stateHidden"   />
+        <activity
+            android:name=".Acivity.AskQuestionStudent"
+            android:theme="@style/AppNoActionBar"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".Acivity.UserVerification"
+            android:theme="@style/AppNoActionBar" />
+        <activity
+            android:name=".Acivity.EntrepreneurSubCategory"
+            android:theme="@style/AppNoActionBar" />
         <activity
             android:name=".Acivity.StudentSubCategory"
             android:theme="@style/AppNoActionBar" />
