--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,7 @@ dependencies {
 
     implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
 
+    //for graph
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.1'
 
 }
