--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
+        //for graph
+        maven { url "https://jitpack.io" }
     }
 }
 
