Done with file upload ,Testimonial video upload and Recent Questions list for both userType

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Acivity.UploadFile"
-            android:theme="@style/AppNoActionBar"/>
+        <activity
+            android:name=".Acivity.AnswertheQuestionActivity"
+            android:theme="@style/AppNoActionBar" />
+        <activity
+            android:name=".Acivity.UploadFile"
+            android:theme="@style/AppNoActionBar" />
         <activity
             android:name=".Acivity.YoutubeLinkUpload"
-            android:theme="@style/AppNoActionBar">
-        </activity>
+            android:theme="@style/AppNoActionBar"></activity>
         <activity
             android:name=".Acivity.AdminQuestionList"
             android:theme="@style/AppNoActionBar" />
