--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
 *.iml
+*.iml.*
 .gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+*build
+*.idea
+*.log
+*.apk
+local.properties
 .DS_Store
-/build
 /captures
 .externalNativeBuild
-.cxx
