--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.DIS.careerlogy"
         minSdkVersion 15
@@ -33,7 +34,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 
     implementation 'com.github.bumptech.glide:glide:3.7.0'             // image loader
@@ -50,5 +51,15 @@ dependencies {
 
     //for graph
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.1'
+    implementation "androidx.core:core-ktx:+"
+    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0"
+    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    implementation 'com.sun.mail:android-mail:1.6.2'
+    implementation 'com.sun.mail:android-activation:1.6.2'
+    implementation 'org.jsoup:jsoup:1.13.1'
+}
+repositories {
+    mavenCentral()
 }
